<resources>
    <string name="app_name">Safe Road Application </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="adress">Adress</string>
    <string name="postal_code">Postal Code</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="imei_of_stolen_equipment">IMEI of stolen equipment</string>
    <string name="validate">Validate</string>
    <string name="email_or_phone_number">Email Or Phone Number</string>
    <string name="connexion_miniscule">connection</string>
    <string name="remember_me">Remember Me</string>
    <string name="click">click</string>
    <string name="back_to_connection">back to connection</string>
    <string name="send">Send</string>
    <string name="finish">Finish</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_to_connect">Try to Connect</string>

    <string name="access_token">pk.eyJ1IjoiZmlyYXNzYWxtIiwiYSI6ImNrM2JsdzNlajBuYXAzY3FoZ25qaHVlZm0ifQ.GbRmyyzchNrHIZTkRvF39A</string>
</resources>
