<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpMail"
    android:background="@drawable/background">



    <EditText
        android:id="@+id/email_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:cursorVisible="false"
        app:layout_constraintBottom_toTopOf="@id/password_registermail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rectangle"
        android:hint="@string/email"
        android:textColorHint="@color/colorWhite"
        android:textAlignment="center"


        />

    <EditText
        android:id="@+id/password_registermail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:cursorVisible="false"
        app:layout_constraintBottom_toTopOf="@id/repeatpasswordemail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_register"
        android:background="@drawable/rectangle"
        android:hint="@string/password"
        android:textColorHint="@color/colorWhite"
        android:textAlignment="center"
        tools:ignore="LabelFor"
        android:inputType="textPassword"
/>

    <EditText
        android:id="@+id/repeatpasswordemail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:cursorVisible="false"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_registermail"
        android:background="@drawable/rectangle"
        android:hint="@string/repeat_password"
        android:textColorHint="@color/colorWhite"
        android:textAlignment="center"
        tools:ignore="LabelFor"
        android:inputType="textPassword"

        />



    <Button
        android:id="@+id/register"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/sigin"
        android:fontFamily="casual"
        android:textColor="@color/colorBlack"
        android:text="@string/register"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatpasswordemail"

        />


    <TextView
        android:id="@+id/switchtophone"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:text="sign up with Phone Number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"

        />



    <TextView
        android:id="@+id/connexionback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:text="@string/try_to_connect"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"

        />

</androidx.constraintlayout.widget.ConstraintLayout>