<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connexion"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="97dp"
        android:background="@drawable/saferoad"
        app:layout_constraintBottom_toTopOf="@id/emailconenxion"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/emailconenxion"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:inputType="textEmailAddress"
        android:cursorVisible="false"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:background="@drawable/rectangle"
        android:hint="@string/email_or_phone_number"
        android:textColorHint="@color/colorWhite"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"
        />


    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="@drawable/rectangle"
        android:cursorVisible="false"
        android:fontFamily="casual"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/forgotpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailconenxion"
        android:layout_marginBottom="80dp"
        />


    <CheckBox
        android:id="@+id/RemmeberMe"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_margin="30dp"
        android:text="@string/remember_me"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signin"
        app:layout_constraintHorizontal_bias="0"
        />


    <Button
        android:id="@+id/forgotpassword"
        android:layout_width="97dp"
        android:layout_height="25dp"
        android:background="@drawable/forgot"
        app:layout_constraintBottom_toTopOf="@id/signin"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RemmeberMe"

        />

    <Button
        android:id="@+id/signup"
        android:layout_width="65dp"
        android:layout_height="16dp"
        android:background="@drawable/signup"
        app:layout_constraintBottom_toTopOf="@id/signin"
        app:layout_constraintLeft_toRightOf="@id/forgotpassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RemmeberMe"
        app:layout_constraintHorizontal_bias="0.8"

        />


    <Button
        android:id="@+id/signin"
        android:layout_width="135dp"
        android:layout_height="36dp"
        android:background="@drawable/sigin"
        android:fontFamily="casual"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotpassword"

        />

</androidx.constraintlayout.widget.ConstraintLayout>