<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projetandroidbinome.ForgotPassword"
    android:background="@drawable/background">



    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/border_style"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:text="Enter the Email Adress associated with your Account: "
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="100dp"
        app:layout_constraintVertical_bias="0.50"
        />

    <TextView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:text="We will email you a verification code to your email adress"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.65"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/emailverif"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:cursorVisible="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/yea"
        android:hint="@string/email"
        android:textColorHint="@color/colorWhite"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0.75"/>

    <Button
        android:id="@+id/send"
        android:layout_width="135dp"
        android:layout_height="36dp"
        android:background="@drawable/sigin"
        android:fontFamily="casual"
        android:text="@string/send"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        android:textColor="@color/colorBlack"
        />

    <TextView
        android:id="@+id/connexionback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:text="@string/try_to_connect"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.95"

        />




</androidx.constraintlayout.widget.ConstraintLayout>
